--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -9,6 +9,7 @@
   <!-- Add additional CSS in static file -->
   {% load static %}
   <link rel="stylesheet" href="{% static 'styles.css' %}">
+  <script src="{% static 'compiled.js' %}" defer></script>
 </head>
 <body>
   <header class="flex items-center justify-center bg-gray white ph3">
