--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -19,6 +19,7 @@
         {% for obj in snippet_codes %}
           <div class='ba bg-blue white'>
             <p><strong> {{obj.snippet_title}}</strong></p>
+            <p><a href="{{ obj.get_absolute_url }}">Click to Edit Snippet</a></p>
           </div>
           <div>
               <p>by {{obj.snippet_creator}}</p>
