--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -25,7 +25,6 @@
           <h2 class="mt2 mb0 f6 fw4 ttu tracked">Welcome to your resource for saving code snippets you often use in projects!</h2>
           <nav class="bt bb tc mw7 center mt4">
             <a class="f6 f5-l link bg-animate black-80 hover-bg-lightest-blue dib pa3 ph4-l" href="{% url 'index' %}">Home</a>
-            <a class="f6 f5-l link bg-animate black-80 hover-bg-light-green dib pa3 ph4-l" href="">Search for Code Snippet...</a>
             <a class="f6 f5-l link bg-animate black-80 hover-bg-light-green dib pa3 ph4-l" href="">Add a code snippet</a>
           {% if request.user.is_authenticated %}
             Logged in as {{ request.user }}  |    <a href="">User Profile Page</a>    |   <a class="f6 f5-l link bg-animate black-80 hover-bg-light-green dib pa3 ph4-l" href="{% url 'auth_logout' %}">Logout</a>
@@ -34,6 +33,11 @@
             <a class="f6 f5-l link bg-animate black-80 hover-bg-light-green dib pa3 ph4-l" href="{% url 'registration_register' %}">Register</a>
           {% endif %}
           </nav>
+          <form id="searchForm">
+            <div id="codeSearch"> 
+                <input id="searchBar" type="text" placeholder="Search for Code Snippet..." onfocus="this.value=''">
+                <button id="searchButton" type="submit">Search</button>
+        </form>
         </header>
   </header>
         <div>
