Changed Body Background

--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -38,6 +38,11 @@
                 <input id="searchBar" type="text" placeholder="Search for Code Snippet..." onfocus="this.value=''">
                 <button id="searchButton" type="submit">Search</button>
         </form>
+        <hr>
+        <div id="searchDiv">
+        <h2 id="searchHeader">Search Results: </h2>
+        </div>
+        <br>
         </header>
   </header>
         <div>
