--- a/core/static/styles.css
+++ b/core/static/styles.css
@@ -1,3 +1,9 @@
+body{
+    text-align: center;
+    background-color: lightgray;
+    margin: 0;
+}
+
 .snippet_header{
     text-align: center;
     text-decoration: underline;
