Working on JS for Search

--- a/core/static/styles.css
+++ b/core/static/styles.css
@@ -46,3 +46,12 @@ body{
     width: 75px;
     font-size: 15px;
 }
+
+#resultsDiv{
+    justify-content: center;
+}
+
+#searchResults{
+    display: center;
+    font-size: 15px;
+}
