--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -43,6 +43,9 @@
         <h2 id="searchHeader">Search Results: </h2>
         </div>
         <br>
+        <div id="searcResults">
+          <div id="search"></div>
+      </div>
         </header>
   </header>
         <div>
