--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -18,18 +18,20 @@
     <div class='tc center avenir w-70'>
         {% for obj in snippet_codes %}
           <div class='ba bg-blue white'>
-            <p><strong> {{obj.snippet_title}}</strong></p>
-            <p><a href="{{ obj.get_absolute_url }}">Click to Edit Snippet</a></p>
+            <p><strong> {{obj.title}}</strong></p>
+            <a class='f6 link mt5 dim br3 ph3 pv2 mb2 dib white bg-dark-blue' href="{{ obj.get_absolute_url }}">Edit</a>
+            <a class="f6 link mt5 dim br3 ph3 pv2 mb2 dib white bg-dark-blue" href="{% url 'add_snippet' %}">Add New</a>
+            <a class="f6 link mt5 dim br3 ph3 pv2 mb2 dib white bg-dark-blue" href="{{ obj.get_absolute_url }}">Delete</a>
           </div>
           <div>
-              <p>by {{obj.snippet_creator}}</p>
+              <p>by {{obj.creator}}</p>
               <p>added {{obj.date_added}}</p>
           </div>
           <div>
-            <p> Language: {{obj.snippet_lang}}</p>
+            <p> Language: {{obj.languages}}</p>
           </div>
           <div>
-            <p>{{obj.snippet_code }}</p>
+            <p>{{obj.code }}</p>
           </div>
         {% endfor %} 
         <a class="f5 link mt5 dim br3 ph3 pv2 mb2 dib white bg-dark-blue" href="{% url 'add_snippet' %}">Add Snippet</a>
