--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -42,7 +42,7 @@
    
    <div>
     {% load static %}
-    <img class= "otter" src="{% static 'otter.png' %}">
+    <img class= "otter" src="{% static 'img/otter.png' %}">
    </div>
 
    {% endif %}
