--- a/core/templates/core/snippet_confirm_delete.html
+++ b/core/templates/core/snippet_confirm_delete.html
@@ -4,9 +4,9 @@
 {% if request.user.is_authenticated %}
 
 <h2>Delete Snippet</h2>
-<p> Are you sure you want to delete this: {{ snippet }} ?</p>
 <form action="Delete Snippet" method="POST">
     {% csrf_token %}
+    <p> Are you sure you want to delete this: {{ obj.title }} ?</p>
     <input type="submit" value="Yes, delete.">
 </form>
 {% elif request.user.is_authenticated %}
