--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -36,6 +36,7 @@
           {% endif %}
           </nav>
           <form id="searchForm">
+            {% csrf_token %}
             <div id="codeSearch"> 
                 <input id="searchBar" type="text" placeholder="Search for Code Snippet..." onfocus="this.value=''">
                 <button id="searchButton" type="submit">Search</button>
@@ -45,7 +46,35 @@
         <h2 id="searchHeader">Search Results: </h2>
         </div>
         <br>
-        <div id="searcResults">
+        <div id="searchResultsView">
+            <div class='tc center avenir w-70'>
+                {% if snippets.count > 0 %}
+                  {% for obj in snippets %}
+                  <div class='ba bg-blue white'>
+                    <p><strong> {{obj.title}}</strong></p>
+                    <a class='f6 link mt5 dim br3 ph3 pv2 mb2 dib white bg-dark-blue' href="{{ obj.get_absolute_url }}">Edit</a>
+                    <a class="f6 link mt5 dim br3 ph3 pv2 mb2 dib white bg-dark-blue" href="{% url 'add_snippet' %}">Add New</a>
+                    <a class="f6 link mt5 dim br3 ph3 pv2 mb2 dib white bg-dark-blue" href="{% url 'delete_snippet' %}">Delete</a>
+                  </div>
+                  <div>
+                      <p>by {{obj.creator}}</p>
+                      <p>added {{obj.date_added}}</p>
+                  </div>
+                  <div>
+                    <p> Language: {{obj.languages}}</p>
+                  </div>
+                  <div><pre><code class='language-{{obj.languages}}'>
+                  <p>{{obj.code }}</p>
+                  </code></pre>
+                  </div>
+                  {% endfor %}
+                {% else %}
+                  <li>No Results!</li>
+                {% endif %}
+           </div>
+        </div>
+        <br> 
+        <div id="searchResults">
           <div id="search"></div>
       </div>
         </header>
