--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -21,7 +21,7 @@
             <p><strong> {{obj.title}}</strong></p>
             <a class='f6 link mt5 dim br3 ph3 pv2 mb2 dib white bg-dark-blue' href="{{ obj.get_absolute_url }}">Edit</a>
             <a class="f6 link mt5 dim br3 ph3 pv2 mb2 dib white bg-dark-blue" href="{% url 'add_snippet' %}">Add New</a>
-            <a class="f6 link mt5 dim br3 ph3 pv2 mb2 dib white bg-dark-blue" href="{% url 'delete_snippet' %}">Delete</a>
+            <a class="f6 link mt5 dim br3 ph3 pv2 mb2 dib white bg-dark-blue" href="">Delete</a>
           </div>
           <div>
               <p>by {{obj.creator}}</p>
