--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -34,6 +34,11 @@
           <p>{{obj.code }}</p>
           </code></pre>
           </div>
+          {% if request.user.is_authenticated and request.user not in snippet.copy_snippet.all %}
+          <a href="{% url 'copy_snippet' snippet.pk %}?next={{ request.path }}">Add to User Page</a>   |   Added to Database: {{ snippet.date_added }}
+          {% elif request.user.is_authenticated and request.user in snippet.copy_snippet.all %}
+          <a href="{% url 'copy_snippet' snippet.pk %}?next={{ request.path }}">Remove from User Page</a>   |   Added to Database: {{ snippet.db_date_added }}  
+          {% endif %}
         {% endfor %} 
         <a class="f5 link mt5 dim br3 ph3 pv2 mb2 dib white bg-dark-blue" href="{% url 'add_snippet' %}">Add Snippet</a>
    </div>
