--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -22,6 +22,11 @@
             <a class='f6 link mt5 dim br3 ph3 pv2 mb2 dib white bg-dark-blue' href="{{ obj.get_absolute_url }}">Edit</a>
             <a class="f6 link mt5 dim br3 ph3 pv2 mb2 dib white bg-dark-blue" href="{% url 'add_snippet' %}">Add New</a>
             <a class="f6 link mt5 dim br3 ph3 pv2 mb2 dib white bg-dark-blue" href="">Delete</a>
+            {% if request.user not in snippet.copy_snippet.all %}
+            <a href="{% url 'copy_snippet' snippet.pk %}?next={{ request.path }}">Add to User Page</a>   |   Added to Database: {{ snippet.date_added }}
+            {% elif request.user in snippet.copy_snippet.all %}
+            <a href="{% url 'copy_snippet' snippet.pk %}?next={{ request.path }}">Remove from User Page</a>   |   Added to Database: {{ snippet.db_date_added }}  
+            {% endif %}
           </div>
           <div>
               <p>by {{obj.creator}}</p>
@@ -34,11 +39,6 @@
           <p>{{obj.code }}</p>
           </code></pre>
           </div>
-          {% if request.user.is_authenticated and request.user not in snippet.copy_snippet.all %}
-          <a href="{% url 'copy_snippet' snippet.pk %}?next={{ request.path }}">Add to User Page</a>   |   Added to Database: {{ snippet.date_added }}
-          {% elif request.user.is_authenticated and request.user in snippet.copy_snippet.all %}
-          <a href="{% url 'copy_snippet' snippet.pk %}?next={{ request.path }}">Remove from User Page</a>   |   Added to Database: {{ snippet.db_date_added }}  
-          {% endif %}
         {% endfor %} 
         <a class="f5 link mt5 dim br3 ph3 pv2 mb2 dib white bg-dark-blue" href="{% url 'add_snippet' %}">Add Snippet</a>
    </div>
