--- a/core/templates/core/user_detail.html
+++ b/core/templates/core/user_detail.html
@@ -3,7 +3,7 @@
 {% block content %}
 <div class='ba bg-blue white'>
 
-<h1>{{ customuser.get_username }} Page of Code Snippets:</h1>
+<h1>{{ user.get_username }} Page of Code Snippets:</h1>
     <br>
 {% if snippets %}
     {% for obj in snippets %}
