--- a/core/templates/core/snippet_delete.html
+++ b/core/templates/core/snippet_delete.html
@@ -6,7 +6,7 @@
 <h2>Delete Snippet</h2>
 <form action="Delete Snippet" method="POST">
     {% csrf_token %}
-    <p> Are you sure you want to delete this: {{ obj.title }} ?</p>
+    <p> Are you sure you want to delete this: {{ snippet.title }} ?</p>
     <input type="submit" value="Yes, delete.">
 </form>
 {% elif request.user.is_authenticated %}
