--- a/core/templates/core/user_list.html
+++ b/core/templates/core/user_list.html
@@ -5,8 +5,8 @@
 
 <h1>{{ user.get_username }} Page of Code Snippets:</h1>
     <br>
-{% if snippets %}
-    {% for obj in snippets %}
+{% if user_list %}
+    {% for obj in user_list %}
         <p><strong> {{obj.title}}</strong></p>
         <a class='f6 link mt5 dim br3 ph3 pv2 mb2 dib white bg-dark-blue' href="{{ obj.get_absolute_url }}">Edit</a>
         <a class="f6 link mt5 dim br3 ph3 pv2 mb2 dib white bg-dark-blue" href="{% url 'add_snippet' %}">Add New</a>
