--- a/core/templates/core/snippet_detail.html
+++ b/core/templates/core/snippet_detail.html
@@ -3,7 +3,7 @@
 {% block content %}
 <div class='ba bg-blue white'>
     <p><strong> {{obj.title}}</strong></p>
-    <a class='f6 link mt5 dim br3 ph3 pv2 mb2 dib white bg-dark-blue' href="{{ obj.get_absolute_url }}">Edit</a>
+    <a class='f6 link mt5 dim br3 ph3 pv2 mb2 dib white bg-dark-blue' href="{% url 'edit_snippet' obj.pk %}">Edit</a>
     <a class="f6 link mt5 dim br3 ph3 pv2 mb2 dib white bg-dark-blue" href="{% url 'add_snippet' %}">Add New</a>
     <a class="f6 link mt5 dim br3 ph3 pv2 mb2 dib white bg-dark-blue" href="">Delete</a>
   </div>
