--- a/core/templates/core/search_list.html
+++ b/core/templates/core/search_list.html
@@ -1,11 +1,11 @@
 {% extends "base.html" %}
-
+{% load staticfiles %}
 {% block content %}
 <div class="ml3 mt0 pa2">
     <form method="GET">
         <tr class="flex wrap around">
-                <td>{{ filter.form.title__icontains.label_tag }}</td>
-                <td>{{ filter.form.title__icontains }}</td>
+                <td id="searchBar" type="text" placeholder="Search for Code Snippet...">{{ filter.form.title__icontains.label_tag }}</td>
+                <td id="searchBar" type="text" placeholder="Search for Code Snippet...">{{ filter.form.title__icontains }}</td>
 
                 <td>{{ filter.form.code__icontains.label_tag }}</td>
                 <td>{{ filter.form.code__icontains }}</td>
@@ -16,33 +16,35 @@
                 <td>{{ filter.form.creator.label_tag }}</td>
                 <td>{{ filter.form.creator }}</td>
 
-                <button class="font button-snippet dim ml4" type='submit'>Search</button>
+                <button id="searchButton" type="submit">Search</button>
         </tr>
     </form>
   </div>
-  <h2>Public Snippets</h2>
-  {% for snippet in filter.qs %}
-  <div class="ml5 f4">
-      
-      <div>
-          <a class="detail-links link black body-font mb3" href="">
-              {{snippet}}
-          </a>
-          <span class="f6 gray">
-              Added by: <a class="link black detail-links dim" href="">{{snippet.creator}}</a>
-              <span class="f6 black"> ~ {{snippet.languages|upper}}</span>
-          </span>
-      </div>
-      
-      <div class="js-snippetcontent ma2 f5 w-50 h-auto ba b--black pa2">
-          {{snippet.code}}
-      </div>
-      <div class="flex column">
-          <div class="f6 mb2">Date added: <em>{{snippet.date_added}}</em></div>
-      </div>  
-  </div>
-  {% endfor %}
-  </div>
+  <h2>Search Code Snippet Manager</h2>
+  {% if filter.qs %}
+    {% for obj in filter.qs %}
+    <div class='near-black'>
+        <p class ='f3'>{{obj.title|title}}</p>
+        <a class='f6 link mt1 dim br3 ph3 pv2 mb2 dib white bg-dark-blue' href="{% url 'edit_snippet' obj.pk %}">Edit</a>
+        <a class="f6 link mt1 dim br3 ph3 pv2 mb2 dib white bg-dark-blue" href="{% url 'add_snippet' %}">Add New</a>
+        <a class="f6 link mt1 dim br3 ph3 pv2 mb2 dib white bg-dark-blue" href="{% url 'snippet-delete' obj.pk %}">Delete</a>
+        {% if request.user not in snippet.copy_snippet.all %}
+        <a href="{% url 'copy_snippet' snippet.pk %}?next={{ request.path }}">Add to User Page</a>   |   Added to Database: {{ snippet.date_added }}
+        {% elif request.user in snippet.copy_snippet.all %}
+        <a href="{% url 'copy_snippet' snippet.pk %}?next={{ request.path }}">Remove from User Page</a>   |   Added to Database: {{ snippet.db_date_added }}  
+        {% endif %}
+        <p>Language: {{obj.languages|title}} | <span>  added {{obj.date_added}}</span><span class="f4"> by {{ obj.creator}}</span> 
+    </div>
+    <div>
+    <pre><code class='language-{{obj.languages}}'>
+    <p>{{obj.code }}</p>
+    </code></pre>
+    </div>
+    {% endfor %}
+  {% else %}
+    <p>Your search contains no results.</p>
+  {% endif %}
+    </div>
 
 
 {% endblock %}
