Added to snippet_form to request login or register if not logged in when trying to add or edit snippets

--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -34,7 +34,8 @@
           {% else %}
             <a class="f6 f5-l link bg-animate black-80 hover-bg-light-green dib pa3 ph4-l" href="{% url 'auth_login' %}">Login</a> |
             <a class="f6 f5-l link bg-animate black-80 hover-bg-light-green dib pa3 ph4-l" href="{% url 'registration_register' %}">Register</a>
-          {% endif %}
+            <a class="f6 f5-l link bg-animate black-80 hover-bg-light-green dib pa3 ph4-l" href="{% url 'search_list' %}">Click to Search</a>
+            {% endif %}
           </nav>
         <form id="searchForm">
             {% csrf_token %}
