Copy Snippet Button

--- a/core/templates/core/user_list.html
+++ b/core/templates/core/user_list.html
@@ -5,7 +5,6 @@
 
 <h1>{{ user.get_username }} Page of Code Snippets:</h1>
     <br>
-{% if user_list %}
     {% for obj in user_list %}
         <p><strong> {{obj.title}}</strong></p>
         <a class='f6 link mt5 dim br3 ph3 pv2 mb2 dib white bg-dark-blue' href="{{ obj.get_absolute_url }}">Edit</a>
@@ -24,6 +23,11 @@
     </code></pre>
     </div>
     {% endfor %}
-{% endif %}
+
+    <div id="copyResultsView"></div>
+    <br> 
+    <div id="copyResults">
+      <div id="copyDiv"></div>
+    </div>
 
 {% endblock %}
