Working on Copying Snippet

--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -37,7 +37,7 @@
           <div>
             <p> Language: {{obj.languages}}</p>
           </div>
-          <div><pre><code class='language-{{obj.languages}}'>
+          <div><pre><code class='language-{{obj.languages}}' id="obj-content-{{obj.id}}">
           <p>{{obj.code }}</p>
           </code></pre>
           </div>
